# wbi-fleet-upgrade

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  OPERATIONS.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  cloudbuild-image-secure.yaml  cloudbuild.yaml  conftest.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh  wb-rollback.sh  wb-upgrade.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: README.md  ci.yml  codeql.yml  dependency-review.yml  pre-commit.yml  release.yml  shellcheck.yml  static-analysis.yml
cloud_function/: .env.yaml.example  README.md  main.py  requirements.txt
cloud_function/src/: __init__.py  clients.py  config.py  rollback.py  upgrader.py
docs/: CLOUD_FUNCTION_DEPLOYMENT.md  README.md  cloud-build.md
k8s/: deployment-with-wif.yaml
scripts/: cleanup-terraform-duplicates.sh  cloudbuild-entrypoint.sh  docker-entrypoint.sh  terraform-plan-all.sh  validate-phase1.sh  validate-terraform.sh  verify-image.sh
src/: __init__.py  cli.py  clients.py  config.py  log_utils.py  models.py  requirements.txt  rollback.py  upgrader.py
terraform/artifact-registry/: kms.tf  main.tf
terraform/artifact-registry-iam/: main.tf  storage-scoped.tf
terraform/cloud-function/: deploy.sh  main.tf  terraform.tfvars.example  variables.tf
terraform/cloudbuild-iam/: audit-logging.tf  custom-roles.tf  main.tf  outputs.tf  variables.tf  workload-identity.tf
tests/unit_tests/: test_cli.py  test_config.py  (+4 more)
